# CSV2Eigen

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.csv  example1.cxx
src/: CSV2Eigen.cxx  CSV2Eigen.h
